# Lang-Switch-Indicator

./: .gitignore  main.py  pyproject.toml
